app/javascript/styles/mastodon/components.scss
/* ... */
.focusable {
  &:focus-visible {
    outline: 2px solid var(--color-border-brand);
    outline-offset: -2px;
    background: var(--color-bg-brand-softest);
  }
}

.status {
  padding: 16px;
  min-height: 54px;
  border-bottom: 1px solid var(--color-border-primary);
  cursor: auto;
  opacity: 1;
  animation: fade 150ms linear;

  @keyframes fade {
    0% {
      opacity: 0;
    }

    100% {
      opacity: 1;
    }
  }

  .content-warning {
    margin-bottom: 10px;

    &:last-child {
      margin-bottom: 0;
    }
  }

  .media-gallery,
  .video-player,
  .audio-player,
  .attachment-list,
  .collection-preview {
    margin-top: 14px;
  }

  &--in-thread {
    --thread-margin: calc(46px + 8px);

    border-bottom: 0;

    & > .status__content,
    & > .status__action-bar,
    & > .media-gallery,
    & > div > .video-player,
    & > .audio-player,
    & > .attachment-list,
    & > .picture-in-picture-placeholder,
    & > .more-from-author,
    & > .status-card,
    & > .collection-preview,
    & > .hashtag-bar,
    & > .content-warning,
    & > .filter-warning,
    & > .status__quote {
      margin-inline-start: var(--thread-margin);
      width: calc(100% - var(--thread-margin));
    }

    .more-from-author {
      width: calc(100% - var(--thread-margin) + 2px);
    }

    .status__content__read-more-button {
      margin-inline-start: var(--thread-margin);
    }
  }

  &__action-bar__button-wrapper {
    flex-basis: 0;
    flex-grow: 1;

    &:last-child {
      flex-grow: 0;
    }
  }

  &--first-in-thread {
    border-top: 1px solid var(--color-border-primary);
  }

  &__line {
    --thread-line-color: var(--color-border-primary);

    height: 16px - 4px;
    border-inline-start: 2px solid var(--thread-line-color);
    width: 0;
    position: absolute;
    top: 0;
    inset-inline-start: 16px + ((46px - 2px) * 0.5);

    .status__wrapper:has(> .status__prepend) &:not(&--full, &--first) {
      height: 50px;
    }

    &--full {
      top: 0;
      height: 100%;

      &::before {
        content: '';
        display: block;
        position: absolute;
        top: 16px - 4px;
        height: 46px + 4px + 4px;
        width: 2px;
        background: var(--thread-line-color);
        inset-inline-start: -2px;
      }
    }

    &--first {
      top: 16px + 46px + 4px;
      height: calc(100% - (16px + 46px + 4px));

      &::before {
        display: none;
      }
    }
  }

  .no-reduce-motion &--highlighted-entry::before {
    content: '';
    position: absolute;
    inset: 0;
    background: var(--color-bg-brand-softest);
    opacity: 0;
    animation: fade 0.7s reverse both 0.3s;
    pointer-events: none;
  }
}

.status__relative-time {
  display: block;
  font-size: 15px;
  line-height: 22px;
  height: 40px;
  flex: 0 0 auto;
  color: var(--color-text-secondary);
}

.notification__relative_time {
  color: var(--color-text-tertiary);
  float: right;
  font-size: 14px;
  padding-bottom: 1px;
}

.status__visibility-icon {
  padding: 0 4px;

  .icon {
    width: 1em;
    height: 1em;
    margin-bottom: -2px;
  }
}

.status__display-name {
  color: var(--color-text-secondary);
}

.status__info .status__display-name {
  max-width: 100%;
  display: flex;
  font-size: 15px;
  line-height: 22px;
  align-items: center;
  gap: 10px;
  overflow: hidden;
  margin-inline-end: auto;

  .display-name {
    bdi {
      overflow: hidden;
      text-overflow: ellipsis;
    }

    &__account {
      white-space: nowrap;
      display: block;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
}

.status__quote-cancel {
  align-self: self-start;
}

.status__info {
  font-size: 15px;
  padding-bottom: 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
  cursor: pointer;
}

.status-check-box__status {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 0 10px;

  .detailed-status__display-name {
    color: var(--color-text-tertiary);

    span:not(.account__avatar) {
      display: inline;
    }

    &:hover strong {
      text-decoration: none;
    }
  }

  .media-gallery,
  .audio-player,
  .video-player {
    margin-top: 15px;
    max-width: 250px;
  }

  .status__content {
    padding: 0;
    white-space: normal;
  }

  .media-gallery__item-thumbnail {
    cursor: default;
  }
}

.status__prepend {
  padding: 16px;
  padding-bottom: 0;
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 15px;
  line-height: 22px;
  font-weight: 500;
  color: var(--color-text-secondary);

  .status__wrapper-reply.status__wrapper--in-thread & {
    --thread-margin: calc(46px + 8px);

    margin-inline-start: var(--thread-margin);
  }

  &__icon {
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 0 0 auto;

    .icon {
      width: 16px;
      height: 16px;
    }
  }

  a {
    color: inherit;
    text-decoration: none;
  }

  > span {
    display: block;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

.status__wrapper-direct,
.notification-ungrouped--direct,
.notification-group--direct,
.notification-group--annual-report {
  background: var(--color-bg-brand-softest);

  &:focus {
    background: var(--color-bg-brand-soft);
  }
}

.status__wrapper-direct,
.notification-ungrouped--direct {
  .status__prepend,
  .notification-ungrouped__header {
    color: var(--color-text-brand);
  }
}

.status__action-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 18px;
  margin-top: 16px;
}

.detailed-status__action-bar-dropdown {
  flex: 1 1 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}
/* ... */

